Rename stylesheet.css to styles.css css update

--- a/styles.css
+++ b/styles.css
@@ -9,5 +9,6 @@
         url('determinationmonowebregular-z5oq-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    text-align: center;
 
 }
